--- a/README.adoc
+++ b/README.adoc
@@ -65,7 +65,7 @@ with the entire environment that it needs to run. Containers are small compared 
 run on any environment where Docker is set up. Moreover, you can run multiple containers on a single
 machine at the same time in isolation from each other.
 
-Learn more about containers on the https://www.docker.com/what-container[official Docker page^].
+Learn more about containers on the https://www.docker.com/what-container[official Docker website^].
 
 === Why use containers?
 
