--- a/README.adoc
+++ b/README.adoc
@@ -18,8 +18,8 @@
 :page-permalink: /guides/{projectid}
 :common-includes: https://raw.githubusercontent.com/OpenLiberty/guides-common/master
 :source-highlighter: prettify
-:page-seo-title: Learn how to use Docker containers for iterative development. 
-:page-seo-description: A tutorial on how to use Docker containers for iterative development.
+:page-seo-title: Iteratively developing a RESTful Java application in a Docker container 
+:page-seo-description: A getting started tutorial and an example on how to iteratively develop and run a simple RESTful Java microservice in a Docker container by building a Docker image using a Dockerfile.
 :guide-author: Open Liberty
 = Using Docker containers to develop microservices
 
