--- a/README.adoc
+++ b/README.adoc
@@ -193,7 +193,7 @@ include::finish/pom.xml[]
 
 == Building the image
 
-include::{common-includes}/ol-docker-pull.adoc[]
+include::{common-includes}/ol-kernel-docker-pull.adoc[]
 
 To build your image, make sure that your Docker daemon is running and execute the Docker `build` command
 from the command line. If you execute your build from the same directory as your Dockerfile, you can
