--- a/README.adoc
+++ b/README.adoc
@@ -93,295 +93,46 @@ and they take up only a fraction of the memory of a single virtual machine image
 include::{common-includes}/gitclone.adoc[]
 
 // =================================================================================================
-// Building your application
+// Running the container 
 // =================================================================================================
 
-== Building your application
+== Running the container 
 
-Before you begin, build your application. To do this, navigate to the `start` directory and run the Maven
-`install` goal:
+The Open Liberty Maven plug-in includes a `devc` goal that builds and runs a Docker container and listens
+for any changes in the project, including application source code or configuration. The Open Liberty server 
+automatically reruns the `docker build` command. This goal allows for quicker turnarounds and an improved developer 
+experience.
 
-[role='command']
-```
-mvn install
-```
-
-Your [hotspot]`pom.xml` file is already configured to add your REST application to the `defaultServer`. But you can tweak this configuration or add your own for another server by updating the [hotspot=execution]`<execution/>` element.
-
-The [hotspot=install-apps]`install-apps` goal copies the application into the specified directory of the specified server.
-In this case, the goal copies the `rest.war` file into the [hotspot=apps]`apps` directory of the `defaultServer` server.
-
-Learn more about this goal on the official https://github.com/WASdev/ci.maven/blob/2.x/docs/install-apps.md[Maven Liberty plug-in repository^].
-
-pom.xml
-[source, xml, linenums, role="code_column"]
-----
-include::finish/pom.xml[]
-----
-
-// =================================================================================================
-// Creating the Dockerfile
-// =================================================================================================
-
-== Creating the Dockerfile
-
-A Dockerfile is a collection of instructions for building a Docker image that can then be run as a
-container. Every Dockerfile begins with a parent or base image on top of which various commands
-are run. For example, you can start your image from scratch and execute commands that download and
-install Java, or you can start from an image that already contains a Java installation.
-
-Navigate to the `start` directory to begin.
-
-[role="code_command hotspot",subs="quotes"]
-----
-#Create the `Dockerfile`.#
-`Dockerfile`
-----
-
-The [hotspot=from file=0]`FROM` instruction initializes a new build stage and indicates the parent image from which your
-image is built. If you don't need a parent image, then use `FROM scratch`, which makes your image a
-base image. 
-
-In this case, you're using the `openliberty/open-liberty:kernel-java8-openj9-ubi` image as your parent image, which comes with the latest Open Liberty runtime.
-
-The [hotspot=link file=0]`RUN` instruction executes various shell commands in a new layer on top of the current image.
-In this case, you create a symlink between the `/opt/ol/wlp/usr/servers` directory and the `/servers`
-directory. This way, you can mount your servers more easily because you don't need to use long path names.
-Note that since the Open Liberty Docker image runs by default with user `1001` (which is a non-root user),
-you must temporarily switch to the `root` user to create the symlink. This is done by using 
-the [hotspot=user-root hotspot=user file=0]`USER` instruction. 
-
-The [hotspot=entrypoint file=0]`ENTRYPOINT` and [hotspot=default-start]`CMD` instructions define a default command that executes when the image runs as
-a container. These two instructions function the same way, except that the [hotspot=default-start file=0]`CMD` instruction is overridden
-with any arguments that are passed at the end of the `docker run` command. In contrast, the
-[hotspot=entrypoint file=0]`ENTRYPOINT` instruction requires the `--entrypoint` flag to be overridden. In this case, you use
-the [hotspot=entrypoint file=0]`ENTRYPOINT` instruction to start an Open Liberty server and the [hotspot=default-start file=0]`CMD` instruction to indicate
-which server to start. Because the [hotspot=default-start file=0]`CMD` instruction is easily overridden, starting any server is convenient.
-
-For a complete list of available instructions, see the https://docs.docker.com/engine/reference/builder[Docker documentation^].
-
-Dockerfile
-[source, text, linenums, role="code_column"]
-----
-include::finish/Dockerfile[]
-----
-
-=== Optional: Writing a .dockerignore file
-
-When Docker runs a build, it sends all of the files and directories that are located in the same directory
-as the Dockerfile to its build context, making them available for use in instructions like `ADD` and `COPY`.
-To make image building faster, add all files and directories that aren't necessary for building your
-image to a `.dockerignore` file. This excludes them from the build context.
-
-A [hotspot file=0]`.dockerignore` file is available to you in the `start` directory. This file includes the [hotspot=src file=0]`src`
-directory, the [hotspot file=1]`pom.xml` file, and some system files. Feel free to add anything else that you want to exclude.
-
-`.dockerignore`
-[source, text, linenums, role="code_column"]
-----
-include::finish/.dockerignore[]
-----
-
-pom.xml
-[source, xml, linenums, role="code_column"]
-----
-include::finish/pom.xml[]
-----
-// =================================================================================================
-// Building the image
-// =================================================================================================
-
-== Building the image
-
-include::{common-includes}/ol-kernel-docker-pull.adoc[]
-
-Next, to build your image, make sure that your Docker daemon is running and execute the Docker `build`
-command from the command line. If you execute your build from the same directory as your Dockerfile,
-you can use the period character (`.`) notation to specify the location for the build context. 
-Otherwise, use the `-f` flag to point to your Dockerfile:
-[role='command']
-```
-docker build -t ol-runtime .
-```
-
-Use the `-t` flag to give the image an optional name. In this case, `ol-runtime` is the name of your image.
-
-The first build usually takes much longer to complete than subsequent builds because Docker needs to
-download all dependencies that your image requires, including the parent image.
-
-If your build runs successfully, you'll see an output similar to the following:
-
-[role="no_copy"]
-----
-Sending build context to Docker daemon  148.9MB
-Step 1/4 : FROM openliberty/open-liberty:kernel-java8-openj9-ubi
-latest: Pulling from library/openliberty/open-liberty:kernel-java8-openj9-ubi
-7b8b6451c85f: Pull complete 
-ab4d1096d9ba: Pull complete 
-e6797d1788ac: Pull complete 
-e25c5c290bde: Pull complete 
-27b2fbbc72b1: Pull complete 
-aa35dfd74487: Pull complete 
-1ade56d64661: Pull complete 
-3493ef172f60: Pull complete 
-cd6dff6d245d: Pull complete 
-82450af30afc: Pull complete 
-Digest: sha256:b7576e4278030537765d4185c4641ee2769194226263f979109ed4fa0e1aa4e4
-Status: Downloaded newer image for openliberty/open-liberty:kernel-java8-openj9-ubi
- ---> 45d4b67ace5b
-Step 2/4 : RUN ln -s /opt/ol/wlp/usr/servers /servers
- ---> Running in cbeb275770ab
-Removing intermediate container cbeb275770ab
- ---> 937183f8460b
-Step 3/4 : ENTRYPOINT ["/opt/ol/wlp/bin/server", "run"]
- ---> Running in 856a4bdec82b
-Removing intermediate container 856a4bdec82b
- ---> 6cf732381877
-Step 4/4 : CMD ["defaultServer"]
- ---> Running in 1a543a9e37d8
-Removing intermediate container 1a543a9e37d8
- ---> 8fdcad065d25
-Successfully built 8fdcad065d25
-Successfully tagged ol-runtime:latest
-----
-
-Each step of the build has a unique ID, which represents the ID of an intermediate image. For example, step 2
-has the ID `937183f8460b`, and step 4 has the ID `8fdcad065d25`, which is also the ID of the final image.
-During the first build of your image, Docker caches every new layer as a separate image and reuses them
-for future builds for layers that didn't change. For example, if you run the build again, Docker reuses
-the images that it cached for steps 2 - 4. However, if you make a change in your Dockerfile, Docker would
-need to rebuild the subsequent layer since this layer also changed.
-
-However, you can also completely disable the caching of intermediate layers by running the build with the
-`--no-cache=true` flag:
+Build and run the container by running the `liberty:devc` goal in the `start directory`
 
 [role='command']
 ```
-docker build -t ol-runtime --no-cache=true .
+mvn liberty:devc
 ```
 
-Learn more about the image build process on the https://docs.docker.com/engine/reference/commandline/image_build[Docker documentation^].
-
-
-// =================================================================================================
-// Running your application in Docker container
-// =================================================================================================
-
-== Running your application in Docker container
-
-Now that your image is built, execute the Docker `run` command with the absolute path to this guide:
-
-include::{common-includes}/os-tabs.adoc[]
-
-[.tab_content.windows_section]
---
-Make sure you substitute the absolute path to this guide.
+Before you access your application from the browser, run the docker ps command from the command line to make sure that your
+container is running and didn’t crash:
 
 [role='command']
 ```
-docker run -d --name rest-app -p 9080:9080 -p 9443:9443 -v <absolute path to guide>/start/target/liberty/wlp/usr/servers:/servers ol-runtime
-```
---
-
-
-[.tab_content.mac_section]
---
-[role='command']
-```
-docker run -d --name rest-app -p 9080:9080 -p 9443:9443 -v $(pwd)/target/liberty/wlp/usr/servers:/servers ol-runtime
-```
---
-
-
-[.tab_content.linux_section]
---
-Use the `-u` flag to override the default user within the container to match the user 
-id on your host machine. This is to ensure the default user has correct permissions to the 
-server directory. 
-
-[role='command']
-```
-docker run -d --name rest-app -p 9080:9080 -p 9443:9443 -v $(pwd)/target/liberty/wlp/usr/servers:/servers -u `id -u` ol-runtime
-```
---
-
-Alternatively, you can also execute the `run` command to mount a single server instead of the whole `servers` directory:
-[role='command']
-
-include::{common-includes}/os-tabs.adoc[]
-
-[.tab_content.windows_section]
---
-Make sure you substitute the absolute path to this guide.
-
-[role='command']
-```
-docker run -d --name rest-app -p 9080:9080 -p 9443:9443 -v <absolute path to guide>/start/target/liberty/wlp/usr/servers/defaultServer:/servers/defaultServer ol-runtime
-```
---
-
-
-[.tab_content.mac_section]
---
-[role='command']
-```
-docker run -d --name rest-app -p 9080:9080 -p 9443:9443 -v $(pwd)/target/liberty/wlp/usr/servers/defaultServer:/servers/defaultServer ol-runtime
-```
---
-
-
-[.tab_content.linux_section]
---
-[role='command']
-```
-docker run -d --name rest-app -p 9080:9080 -p 9443:9443 -v $(pwd)/target/liberty/wlp/usr/servers/defaultServer:/servers/defaultServer -u `id -u` ol-runtime
-```
---
-
-Let's break down the flags:
-
-[cols="15, 100", options="header"]
-|===
-| *Flag* | *Description*
-| -d | This flag tells Docker to run the container in the background. Without this flag, Docker runs
-the container in the foreground.
-| --name | This flag specifies a name for the container.
-| -p | This flag maps the container ports to the host ports.
-| -v | This flag mounts a directory or file to the file system of the container.
-|===
-
-You can pass in an optional server name at the end of the `run` command to override the `defaultServer`
-server in the `CMD` instruction. For example, if your `servers` directory also contains a server called
-`testServer`, then it can be started as shown in the following example:
-
-[role='no_copy']
-```
-docker run -d --name rest-app -p 9080:9080 -p 9443:9443 -v <absolute path to guide>/start/target/liberty/wlp/usr/servers:/servers ol-runtime testServer
+docker ps 
 ```
 
-Learn more about running containers on the https://docs.docker.com/engine/reference/run[official Docker website^]
+You should see the following output:
 
-// =================================================================================================
-// Testing the container
-// =================================================================================================
+[IMAGE]
 
-== Testing the container
+To view a full list of all available containers, run the docker ps -a command from the command line.
 
-Before you access your application from the browser, run the `docker ps` command from the
-command line to make sure that your container is running and didn't crash:
-
-[role="no_copy"]
-----
-$ docker ps
-CONTAINER ID        IMAGE               CREATED             STATUS              NAMES
-2720cea71700        ol-runtime          2 seconds ago       Up 1 second         rest-app
-----
-
-To view a full list of all available containers, run the `docker ps -a` command from the command line.
-
-If your container is running without problems, point your browser to http://localhost:9080/LibertyProject/System/properties[http://localhost:9080/LibertyProject/System/properties^],
+If your container is running without problems, point your browser to http://localhost:9080/LibertyProject/System/properties, 
 where you can see a JSON file that contains the system properties of the JVM in your container.
-[role="code_command hotspot", subs="quotes"]
+
+// =================================================================================================
+// Updating the server while the container is running 
+// =================================================================================================
+
+== Updating the server while the container is running
+
 ----
 #Update the `PropertiesResource` class.#
 `src/main/java/io/openliberty/guides/rest/PropertiesResource.java`
@@ -391,40 +142,42 @@ where you can see a JSON file that contains the system properties of the JVM in 
 Change the endpoint of your application from `properties` to `properties-new` by changing the [hotspot=Path]`@Path`
 annotation to `"properties-new"`.
 
+After you make the file changes, Open Liberty automatically reruns the container. To see these changes reflected in the container, 
+point your browser to http://localhost:9080/LibertyProject/System/properties-new[http://localhost:9080/LibertyProject/System/properties-new^].
 
-To see these changes reflected in the container, run the following command from the command line to
-rebuild your application and point your browser to http://localhost:9080/LibertyProject/System/properties-new[http://localhost:9080/LibertyProject/System/properties-new^].
-[role='command']
-```
-mvn package
-```
-You see the same JSON file that you saw previously.
 
-To stop your container, run the following command from the command line.
-[role='command']
-```
-docker stop rest-app
-```
+// =================================================================================================
+// Testing the container 
+// =================================================================================================
 
-If a problem occurs and your container exits prematurely, the container won't appear in the container
-list that the `docker ps` command displays. Instead, your container appears with an `Exited`
-status when you run the `docker ps -a` command. Run the `docker logs rest-app` command to view the
-container logs for any potential problems and double-check that your Dockerfile is correct. When you
-find the cause of the issue, remove the faulty container with the `docker rm rest-app` command, rebuild
-your image, and start the container again.
+== Testing the container 
 
-PropertiesResource.java
-[source, Java, linenums, role='code_column hide_tags=comment']
+You can test this service manually by starting a server and pointing a web browser at the [http://localhost:9080/LibertyProject/System/properties-new^]URL.
+Automated tests are a much better approach because they trigger a failure if a change introduces a bug.
+JUnit and the JAX-RS Client API provide a simple environment to test the application. 
+You can write tests for the individual units of code outside of a running application server, or they
+can be written to call the application server directly. In this example, you will create a test that does the latter.
+
+[role="code_command hotspot", subs="quotes"]
 ----
-include::finish/src/main/java/io/openliberty/guides/rest/PropertiesResource.java[]
+#Create the `EndpointIT` class.#
+`src/test/java/it/io/openliberty/guides/rest/EndpointIT.java`
 ----
 
-== Great work! You're done!
+[role='command']
+include::{common-includes}/devmode-test.adoc[]
 
-You have learned how to set up, run, iteractively develop a simple REST application in a container with
-Open Liberty and Docker. Whenever you make changes to your application code, they will now reflect
-automatically on the Open Liberty server running in a container when the application rebuilds.
+You will see the following output:
 
+[source,role="no_copy"]
+----
+-------------------------------------------------------
+ T E S T S
+-------------------------------------------------------
+Running it.io.openliberty.guides.rest.EndpointIT
+Tests run: 1, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 2.884 sec - in it.io.openliberty.guides.rest.EndpointIT
 
+Results :
 
-include::{common-includes}/attribution.adoc[subs="attributes"]
+Tests run: 1, Failures: 0, Errors: 0, Skipped: 0
+----
