--- a/README.adoc
+++ b/README.adoc
@@ -187,8 +187,9 @@ Let's try running development mode with a Dockerfile. Navigate to the `start` di
 `Dockerfile`
 ----
 
-The FROM instruction initializes a new build stage and indicates the parent image from which your image
-is built. If you don’t need a parent image, then use FROM scratch, which makes your image a base image.
+The [hotspot=from file=0]`FROM` instruction initializes a new build stage and indicates the parent image from which your
+image is built. If you don't need a parent image, then use `FROM scratch`, which makes your image a
+base image. 
 
 In this case, you’re using the `openliberty/open-liberty:kernel-java8-openj9-ubi` image as your parent image, 
 which comes with the latest Open Liberty runtime.
@@ -233,12 +234,12 @@ include::finish/.dockerignore[]
 
 Another useful feature of development mode with a container is the ability to pass addtional options
 for the `docker run` command. This can be done using the `-DdockerRunOpts` option with the `devc` command.
-Any options that you would normally add to the `docker run` command, can be added to this options. Below
+Any options that you would normally add to the `docker run` command, can be added to this option. Below
 is an example of an environment variable being passed in.
 
 [role="no_copy"]
 ----
-mvn liberty:devc -DdockerRunOpts="--env VAR=123"
+mvn liberty:devc -DdockerRunOpts="--env JAVA_HOME=/opt/java/openjdk"
 ----
 
 If the dockerfile isn't located in the directory that the `devc` goal is being run from, you can also 
@@ -249,8 +250,6 @@ tab of the Liberty Maven Plugin as such:
 
 [role="no_copy"]
 ----
-mvn liberty:devc -DdockerRunOpts="--env JAVA_HOME=/opt/java/openjdk"
-----
 ```
 <groupId>io.openliberty.tools</groupId>
 <artifactId>liberty-maven-plugin</artifactId>
@@ -260,6 +259,7 @@ mvn liberty:devc -DdockerRunOpts="--env JAVA_HOME=/opt/java/openjdk"
     <dockerFile> ... </dockerFile>
 </configuration>
 ```
+----
 
 // =================================================================================================
 // Testing the container 
