--- a/README.adoc
+++ b/README.adoc
@@ -154,7 +154,7 @@ With your container running, make the following update to the source code.
 Change the endpoint of your application from `properties` to `properties-new` by changing the [hotspot=Path]`@Path`
 annotation to `"properties-new"`.
 
-After you make the file changes, Open Liberty automatically restarts(?) the container. To see these changes reflected in the container, 
+After you make the file changes, Open Liberty automatically restarts the container. To see these changes reflected in the container, 
 point your browser to http://localhost:9080/LibertyProject/System/properties-new[http://localhost:9080/LibertyProject/System/properties-new^].
 
 When you need to stop the container, press `CTRL+C` in the session that the container was started in or run 
@@ -168,7 +168,7 @@ mvn liberty:stop
 ```
 
 PropertiesResource.java
-[source, java, linenums, role="code_column"]
+[source, java, linenums, role='code_column']
 ----
 include::finish/src/main/java/io/openliberty/guides/rest/PropertiesResource.java[]
 ----
@@ -245,7 +245,7 @@ include::finish/.dockerignore[]
 == Starting development mode with run options
 
 Another useful feature of development mode with a container is the ability to pass addtional options
-for the `docker run` command. This can be done using the `-DdockerRunOpts` option with the `devc` command.
+for the `docker run` command. This can be done using the `-DdockerRunOpts` option with the `devc` goal.
 Any options that you would normally add to the `docker run` command, can be added to this option. Below
 is an example of an environment variable being passed in.
 
@@ -255,14 +255,13 @@ mvn liberty:devc -DdockerRunOpts="--env JAVA_HOME=/opt/java/openjdk"
 ----
 
 If the dockerfile isn't located in the directory that the `devc` goal is being run from, you can also 
-the `-Ddockerfile` goal to specify the location. 
+use the `-Ddockerfile` option to specify the location. 
 
 Additionally, both of these options can be added to the `pom.xml` file as part under the `<configuration>` 
 tab of the Liberty Maven Plugin as such:
 
 [role="no_copy"]
 ----
-```
 <groupId>io.openliberty.tools</groupId>
 <artifactId>liberty-maven-plugin</artifactId>
 <version>3.2.2</version>
@@ -270,7 +269,6 @@ tab of the Liberty Maven Plugin as such:
     <dockerRunOpts> ... </dockerRunOpts>
     <dockerFile> ... </dockerFile>
 </configuration>
-```
 ----
 
 // =================================================================================================
